// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectCard > Snapshot тесты > соответствует snapshot для featured варианта 1`] = `
<div
  class="grid md:grid-cols-2 gap-6 items-center"
>
  <div
    class="relative aspect-video overflow-hidden rounded-lg border bg-muted"
  >
    <video
      autoplay=""
      class="object-cover w-full h-full"
      loop=""
      playsinline=""
      src="/videos/test-project.mp4"
    >
      <source
        src="/videos/test-project.mp4"
        type="video/mp4"
      />
      Ваш браузер не поддерживает видео.
    </video>
  </div>
  <div
    class="space-y-4"
  >
    <h3
      class="text-2xl md:text-3xl font-bold"
    >
      Test Project Video
    </h3>
    <p
      class="text-muted-foreground text-base md:text-lg leading-relaxed"
    >
      Полное описание тестового проекта с видео файлом. Этот проект демонстрирует работу с видео превью.
    </p>
    <div
      class="flex flex-wrap gap-2"
    >
      <div
        class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
      >
        React
      </div>
      <div
        class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
      >
        TypeScript
      </div>
      <div
        class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
      >
        Next.js
      </div>
    </div>
    <div
      class="flex flex-col sm:flex-row gap-3 pt-2"
    >
      <a
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
        data-slot="button"
        href="https://test-project.example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Посмотреть
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-up-right ml-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7h10v10"
          />
          <path
            d="M7 17 17 7"
          />
        </svg>
      </a>
      <a
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3"
        data-slot="button"
        href="https://github.com/test/test-project"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-github mr-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
          />
          <path
            d="M9 18c-4.51 2-5-2-7-2"
          />
        </svg>
        GitHub
      </a>
    </div>
  </div>
</div>
`;

exports[`ProjectCard > Snapshot тесты > соответствует snapshot для grid варианта 1`] = `
<a
  href="/projects/test-project-1"
>
  <div
    class="group rounded-lg overflow-hidden border bg-card hover:shadow-lg transition-shadow cursor-pointer h-full"
  >
    <div
      class="relative aspect-video overflow-hidden bg-muted"
    >
      <div
        class="transition-transform group-hover:scale-105 duration-300 w-full h-full"
      >
        <video
          autoplay=""
          class="object-cover w-full h-full"
          loop=""
          playsinline=""
          src="/videos/test-project.mp4"
        >
          <source
            src="/videos/test-project.mp4"
            type="video/mp4"
          />
          Ваш браузер не поддерживает видео.
        </video>
      </div>
      <div
        class="absolute top-2 right-2"
      >
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent text-secondary-foreground hover:bg-secondary/80 text-xs backdrop-blur-sm bg-background/80"
        >
          Рабочий
        </div>
      </div>
    </div>
    <div
      class="p-4 space-y-3"
    >
      <h3
        class="text-xl font-bold group-hover:text-primary transition-colors"
      >
        Test Project Video
      </h3>
      <p
        class="text-sm text-muted-foreground line-clamp-2"
      >
        Тестовый проект с видео
      </p>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          React
        </div>
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          TypeScript
        </div>
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          Next.js
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`ProjectCard > Snapshot тесты > соответствует snapshot для pet-проекта с малым количеством технологий 1`] = `
<a
  href="/projects/test-project-3"
>
  <div
    class="group rounded-lg overflow-hidden border bg-card hover:shadow-lg transition-shadow cursor-pointer h-full"
  >
    <div
      class="relative aspect-video overflow-hidden bg-muted"
    >
      <div
        class="transition-transform group-hover:scale-105 duration-300 w-full h-full"
      />
      <div
        class="absolute top-2 right-2"
      >
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent text-secondary-foreground hover:bg-secondary/80 text-xs backdrop-blur-sm bg-background/80"
        >
          Pet-проект
        </div>
      </div>
    </div>
    <div
      class="p-4 space-y-3"
    >
      <h3
        class="text-xl font-bold group-hover:text-primary transition-colors"
      >
        Test Pet Project
      </h3>
      <p
        class="text-sm text-muted-foreground line-clamp-2"
      >
        Тестовый pet-проект с минимальными технологиями
      </p>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          HTML
        </div>
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          CSS
        </div>
      </div>
    </div>
  </div>
</a>
`;
